--- a/low_mach.tex
+++ b/low_mach.tex
@@ -437,9 +437,9 @@ Note that now the jump operator acts on pressure (it could equivalently operate 
 \subsection{Asymptotic Study in the Low-Mach Regime} \label{sec:lowMach}
 %===================================================================================================
 
-The Euler equations with viscous stabilization, \eqt{eq:??}, bear some similarities with the Navier-Stokes equations in the sense that dissipative terms (second-order derivatives) are present in both sets of equations. A abundant literature exists regarding the low-Mach asymptotics of the Navier-Stokes equations \cite{LowMach1, LowMach2, LowMach3, Muller}.   
+The Euler equations with viscous stabilization, \eqt{eq:ent_visc_coeff}, bear some similarities with the Navier-Stokes equations in the sense that dissipative terms (second-order derivatives) are present in both sets of equations. A abundant literature exists regarding the low-Mach asymptotics of the Navier-Stokes equations \cite{LowMach1, LowMach2, LowMach3, Muller}.   
 %
-The asymptotic study presented here follows the work of Muller et al. \cite{Muller} where an asymptotic derivation for the Navier-Stokes  was presented. Here, we remind the reader that the objective of the asymptotic study is to determine appropriate scaling for the entropy viscosity coefficients in the low-Mach limit so that the dissipative terms are well-scaled for two limit cases: (i) the isentropic form of the Euler equations that degenerate to \tct{the incompressible system of equations} in the-low Mach limit and (ii) the non-isentropic version of the Euler equations with the formation of shocks that need stabilization to prevent spurious oscillations from forming.
+The asymptotic study presented here follows the work of Muller et al. \cite{Muller} where an asymptotic derivation for the Navier-Stokes  was presented. Here, we remind the reader that the objective of the asymptotic study is to determine appropriate scaling for the entropy viscosity coefficients in the low-Mach limit so that the dissipative terms are well-scaled for two limit cases: (i) the isentropic form of the Euler equations that degenerate to \tcr{the incompressible system of equations} in the-low Mach limit and (ii) the non-isentropic version of the Euler equations with the formation of shocks that need stabilization to prevent spurious oscillations from forming.
 %multi-D Euler equations degenerate to the incompressible system of equations, which implies that the dissipative terms are well-scaled. 
 
 The first step in the asymptotic study is to re-write \eqt{eq:euler_visc} in a non-dimensional manner. 
@@ -847,7 +847,7 @@ where $U_i$ denotes the set of conservative variables.
 This section is dedicated to presenting $1$- and $2$-D numerical results obtained by solving \eqt{eq:euler_variable_A_bis} with the entropy viscosity method. This section has two objectives: validate our new definition of the viscosity coefficients for the low Mach limit, and, make sure that the new definition can still resolve shocks.\\
 The first set of $1$-D simulations consist of liquid water and steam flowing in a convergent-divergent nozzle. This test is interesting for multiple reasons: a steady-state is reached (some stabilization methods are known to have difficulties to reach a steady-state (\cite{FluxLimiter, FluxLimiter2}), it can be performed for liquid and gas phases, and, an analytical solution of the steady-state solution is available which allow for convergence study. The $1$-D Leblanc shock tube test \cite{Leblanc} (in a straight pipe) is also performed and consists of a flow developing shocks. A convergence study will be performed in order to demonstrate convergence of the numerical solution to the exact solution. A slow moving shock is also investigated \cite{james}. This test is interesting to evaluate the capabilities of the method at damping the post-shock low frequency noise. \\ 
 This section also included $2$-D simulations from subsonic to supersonic flows. Subsonic flows of a gas over a $2$-D cylinder and a hump \cite{Hump} are simulated and results are shown for various far-field Mach numbers. Numerical results of a supersonic flow in a compression corner are provided to illustrate the capabilities of the new definition in the supersonic case. Convergence studies are performed when an analytical solution is available. \\
-For each simulation, informations relative to the boundary conditions and the equation of state will be provided. All of the numerical solution presented in this section are run with the second-order temporal integrator $BDF2$ and linear polynomials test functions. The integrals are numerically computed using a second-order Gauss quadrature rule. The Ideal Gas \cite{IGEOS} or Stiffened Gas equation of state \cite{SGEOS} are used and a generic formulation is recalled in \eqt{eq:eos}.
+For each simulation, informations relative to the boundary conditions, the Current Friedrich Lax number ($CFL$), the mesh and the equation of state will be provided. All of the numerical solution presented in this section are run with the second-order temporal integrator $BDF2$ and linear polynomials test functions. The integrals are numerically computed using a second-order Gauss quadrature rule. The Ideal Gas \cite{IGEOS} or Stiffened Gas equation of state \cite{SGEOS} are used and a generic formulation is recalled in \eqt{eq:eos}.
 \begin{equation}
 \label{eq:eos}
 P = (\gamma-1) \rho (e-q) - \gamma P_{\infty}
@@ -874,7 +874,7 @@ $\gamma$ & $C_v$ $(J\cdot kg^{-1} \cdot K^{-1})$ & $P_{\infty}$ $(Pa)$ & $q$ $(J
 \end{center}
 \end{table}
 Because of the low pressure difference between the inlet and the outlet, the smooth initial conditions, and the large value of $P_{\infty}$, the flow remains subsonic and thus, should not display any shock. Enthalpy and entropy are conserved through the nozzle, and these conservation relations are used to determine the exact solution at steady-state \cite{nozzle_exact}.
-Plots of the Mach number, density and pressure are given at steady-state in \fig{fig:1d_nozzle_liq_vel}, \fig{fig:1d_nozzle_liq_density}, \fig{fig:1d_nozzle_liq_press}, respectively, along with the exact solution for comparison. The viscosity coefficients are also plotted in \fig{fig:1d_nozzle_liq_visc}. The mesh used is uniform and has $50$ cells.
+Plots of the Mach number, density and pressure are given at steady-state in \fig{fig:1d_nozzle_liq_vel}, \fig{fig:1d_nozzle_liq_density}, \fig{fig:1d_nozzle_liq_press}, respectively, along with the exact solution for comparison. The viscosity coefficients are also plotted in \fig{fig:1d_nozzle_liq_visc}. An uniform mesh of $50$ cells was used to get the numerical solution and the time step was computed using a $CFL$ of $750$.
 %Since a steady-state analytical solution is available to us (REF), a convergence study is performed in order to demonstrate the accuracy of the entropy viscosity method by computing the L$1$ and L$2$ norms of the error between the numerical and exact solutions.
 \begin{figure}[H]
         \centering
@@ -984,7 +984,7 @@ $\gamma$ & $C_v$ $(J\cdot kg^{-1} \cdot K^{-1})$ & $P_{\infty}$ $(Pa)$ & $q$ $(J
 \end{tabular}
 \end{center}
 \end{table}
-The pressure difference applied between the inlet and outlet is large enough to make the steam accelerates through the nozzle and result in the formation of shock in the divergent part. The behavior is different from what is observed for the liquid water phase in \sct{sec:liquid_nozzle} because of the liquid to gas density ratio that is of $1000$. Even though a shock forms, an exact solution at steady-state is still available \cite{nozzle_exact}. The objective of this section is to show that using the new definition of the viscosity coefficient in \eqt{eq:final_def_visc_coeff}, the shock can be correctly resolved without spurious oscillation. The steady-state numerical solution is shown in \fig{fig:1d_vap_nozzle} and was run with a mesh of $1600$ cells.
+The pressure difference applied between the inlet and outlet is large enough to make the steam accelerates through the nozzle and result in the formation of shock in the divergent part. The behavior is different from what is observed for the liquid water phase in \sct{sec:liquid_nozzle} because of the liquid to gas density ratio that is of $1000$. Even though a shock forms, an exact solution at steady-state is still available \cite{nozzle_exact}. The objective of this section is to show that using the new definition of the viscosity coefficient in \eqt{eq:final_def_visc_coeff}, the shock can be correctly resolved without spurious oscillation. The steady-state numerical solution is shown in \fig{fig:1d_vap_nozzle}, was run with an uniform mesh of $1600$ cells and a $CFL$ equal to $80$ (a high $CFL$ value can be used since the shock is not moving and, thus, does not need to be tracked).
 \begin{figure}[H]
         \centering
         \begin{subfigure}[b]{0.495\textwidth}
@@ -1102,7 +1102,7 @@ left & $1.$ & $0.$ & $0.1$ \\
 \nonumber
 \end{table}
 This test is computationally challenging because of the large left to right pressure ratio.
-The computational domain consists of a $1$-D pipe of length $L=9m$ with an interface located at $x=2m$. At $t=0.s$, the interface is removed, allowing the fluid to move. The numerical solution is run until $t=4.s$ and the density, momentum and total energy profiles are given in \fig{fig:1d_leblanc_vel}, \fig{fig:1d_leblanc_density} and \fig{fig:1d_leblanc_press}, respectively, along with the exact solution. The viscosity coefficients are also plotted in \fig{fig:1d_leblanc_visc}. These plots were  run with three different uniform mesh of $800$, $3200$ and $6000$ cells and a constant time step $\Delta t = 10^{-3}s.$.
+The computational domain consists of a $1$-D pipe of length $L=9m$ with an interface located at $x=2m$. At $t=0.s$, the interface is removed, allowing the fluid to move. The numerical solution is run until $t=4.s$ and the density, momentum and total energy profiles are given in \fig{fig:1d_leblanc_vel}, \fig{fig:1d_leblanc_density} and \fig{fig:1d_leblanc_press}, respectively, along with the exact solution. The viscosity coefficients are also plotted in \fig{fig:1d_leblanc_visc}. These plots were  run with three different uniform mesh of $800$, $3200$ and $6000$ cells and a constant $CFL = 1$.
 \begin{figure}[H]
         \centering
         \begin{subfigure}[b]{0.495\textwidth}
@@ -1222,7 +1222,7 @@ The convergence rates are close to the expected values which prove convergence o
 %---------------------------------------------------------------------------------------------------
 \subsection{$1$-D shock tube for liquid phase} \label{sec:liquid_shock}
 %---------------------------------------------------------------------------------------------------
-We want to investigate the capabilities of the entropy viscosity method to resolve strong shock for the liquid phase. This test is a preliminary work to the application of the entropy viscosity method to a two phase flow model. The Stiffened gas equation of state is used to model a liquid flow with the following parameters: $\gamma = 4.4$, $P_{\infty} = 6 \cdot 10^8$ $Pa$, $q = 0$ $J \cdot kg^{-1}$ and $Cv = 1000$ $J \cdot kg^{-1} \cdot K^{-1}$. The computational domain is of length $L=1$ $m$, discretized with an uniform mesh of $500$ cells, and the step initial conditions are given in \tbl{tbl:ic_strong_shock}.
+We want to investigate the capabilities of the entropy viscosity method to resolve strong shock for the liquid phase. This test is a preliminary work to the application of the entropy viscosity method to a two phase flow model. The Stiffened gas equation of state is used to model a liquid flow with the following parameters: $\gamma = 4.4$, $P_{\infty} = 6 \cdot 10^8$ $Pa$, $q = 0$ $J \cdot kg^{-1}$ and $Cv = 1000$ $J \cdot kg^{-1} \cdot K^{-1}$. The computational domain is of length $L=1$ $m$, discretized with an uniform mesh of $500$ cells. A $CFL$ was set equal to one.The step initial conditions are given in \tbl{tbl:ic_strong_shock}.
 \begin{table}[H]
 \begin{center}
  \caption{\label{tbl:ic_strong_shock} Initial conditions for the $1$-D liquid shock tube.}
@@ -1237,7 +1237,7 @@ left & $10^{3}$ & $0.$ & $10^9$ \\
 \end{tabular}
 \end{center}
 \end{table}
-The simulation is run with a constant time step of $\Delta t = 10^{-7}$ $s$ until the final time $t_{final} = 7 \cdot 10^{-5}$ $s$. The plots of the pressure, the density, the velocity and the viscosity coefficients profiles are given in \fig{fig:1d_strong_shock} along with the exact solution for comparison.
+The simulation is run with a $CFL=1$ until the final time $t_{final} = 7 \cdot 10^{-5}$ $s$. The plots of the pressure, the density, the velocity and the viscosity coefficients profiles are given in \fig{fig:1d_strong_shock} along with the exact solution for comparison.
 \begin{figure}[H]
         \centering
         \begin{subfigure}[b]{0.495\textwidth}
@@ -1260,7 +1260,7 @@ The numerical solution does not display any oscillations and match the exact sol
 %---------------------------------------------------------------------------------------------------
 \subsection{$1$-D slow moving shock} \label{sec:slow_moving_shock}
 %---------------------------------------------------------------------------------------------------
-A $1$-D slow moving shock (\cite{james}) is simulated with the entropy viscosity method. It consist of a shock wave moving from left to right with the initial conditions given in \tbl{tbl:ic_slow_moving}. The Ideal Gas equation of state is used with a heat capacity ratio, $\gamma$, of $1.1$. Note that assuming a Courant number of $1$, it takes up to $50$ time steps for the shock to traverse on mesh cell. In order to make the shock travel a significant distance, the final time is taken equal to $t=1.1s$. Then, a pressure boundary condition is used at the left boundary to let the rarefaction and contact waves exit the domain.   
+A $1$-D slow moving shock (\cite{james}) is simulated with the entropy viscosity method. It consist of a shock wave moving from left to right with the initial conditions given in \tbl{tbl:ic_slow_moving}. The Ideal Gas equation of state is used with a heat capacity ratio, $\gamma$, of $1.4$. Note that assuming a $CFL$ of $1$, it takes up to $50$ time steps for the shock to traverse one mesh cell. In order to make the shock travel a significant distance, the final time is taken equal to $t=1.1s$. Then, a pressure boundary condition is used at the left boundary to let the rarefaction and contact waves exit the domain.   
 \begin{table}[H]
 \begin{center}
  \caption{\label{tbl:ic_slow_moving} Initial conditions for a $1$-D slow moving shock.}
@@ -1276,7 +1276,7 @@ left & $1.$ & $-0.81$ & $1.$ \\
 \end{center}
 \nonumber
 \end{table}
-A slow moving shock is known to produce post-shock noise of low frequency that are not damped by some numerical dissipation methods (\cite{james}). The objective, here, is to see wether or not the entropy viscosity method is capable of damping the low frequency waves. Numerical results are given in \fig{fig:low_moving_shock} and are compared to the exact solution obtained from a Riemann solver. 
+A slow moving shock is known to produce post-shock noise of low frequency that are not damped by some numerical dissipation methods (\cite{james}). The objective, here, is to see wether or not the entropy viscosity method is capable of damping the low frequency waves. Numerical results are given in \fig{fig:low_moving_shock} and are compared to the exact solution obtained from a Riemann solver. The numerical solution was obtained with an uniform mesh of $200$ cells and $CFL=1$.
 \begin{figure}[H]
         \centering
         \begin{subfigure}[b]{0.495\textwidth}
@@ -1295,11 +1295,11 @@ A slow moving shock is known to produce post-shock noise of low frequency that a
         \end{subfigure} 
         \caption{Slow moving shock profiles at $t=1.1s$.}\label{fig:low_moving_shock}
 \end{figure} 
-The numerical results show good agreement with the exact solution and do not display any post shock noise. As explained in \cite{roberts}, Godunov's type method usually fails to resolve a slow moving shock because of the nature of the stabilization method that is proportional to the eigenvalue. In the case under consideration, the shock is moving slowly which underestimate the dissipation. In the case of the entropy viscosity method, the entropy residual detects the shock position and the normalization parameter makes the high-order viscosity coefficients saturate to the first-order viscosity that is proportional to the local maximum eigenvalue $||\vec{u}||+c$. The rarefaction and contact waves are not on \fig{fig:profiles_sms} since they exited the computational domain through the left pressure boundary condition. 
+The numerical results show good agreement with the exact solution and do not display any post shock noise. The rarefaction and contact waves are not on \fig{fig:profiles_sms}, since they exited the computational domain through the left pressure boundary condition. As explained in \cite{roberts}, Godunov's type method usually fails to resolve a slow moving shock because of the nature of the stabilization method: the method scales as the eigenvalue of the appropriate field. Thus, in the case of a slow moving shock, the dissipation added to the system is under-estimated and leads to post-shock noise. In the case of the entropy viscosity method, the entropy residual detects the shock position and the normalization parameter makes the high-order viscosity coefficients saturate to the first-order viscosity. The main difference between the Godunov's type method and the entropy viscosity method relies in the definition of the first-order viscosity method that is proportional to the \emph{local maximum eigenvalue} $||\vec{u}||+c$ and not to the eigenvalue of the characteristic field.
 %---------------------------------------------------------------------------------------------------
 \subsection{Subsonic flow over a $2$-D cylinder} \label{sec:cylinder}
 %---------------------------------------------------------------------------------------------------
-The flow of a fluid over a $2$-D cylinder is a typical benchmark case to test the behavior of a numerical method in the low Mach regime. For this test, an analytical solution is available in the incompressible limit or low Mach limit (REFS) and often referred to as potential flow. The main features of the potential flow are the following:
+The flow of a fluid over a $2$-D cylinder is a typical benchmark case to test the behavior of a numerical method in the low Mach regime. For this test, an analytical solution is available in the incompressible limit or low Mach limit and often referred to as potential flow. The main features of the potential flow are the following:
 \begin{itemize}
 \item The solution is symmetric: the iso-mach number lines are used to asses the symmetry of the numerical solution.
 \item The velocity at the top of the cylinder is twice the incoming velocity set at the inlet.
@@ -1310,7 +1310,7 @@ The flow of a fluid over a $2$-D cylinder is a typical benchmark case to test th
 \end{eqnarray}
 where $\tilde{P}$ and $M_{\infty}$ are the pressure fluctuations and the inlet Mach number, respectively.
 \end{itemize}
-The computational domain consists of a $1\times 1$ square with a circular hole of radius $0.05$ in its middle. At the inlet, a subsonic stagnation boundary condition is used: the stagnation pressure and temperature are computed using the following relations, valid for the Stiffened and Ideal gas equation of states:
+The computational domain consists of a $1\times 1$ square with a circular hole of radius $0.05$ in its middle. A $P_1$ triangular mesh with $4008$ elements was used to discretize the geometry. At the inlet, a subsonic stagnation boundary condition is used: the stagnation pressure and temperature are computed using the following relations, valid for the Stiffened and Ideal gas equation of states:
 \begin{equation}
 \label{eq:stagnation_relations}
 \left\{
@@ -1320,7 +1320,7 @@ T_0 = T\left( 1 + \frac{\gamma-1}{2} M^2 \right)
 \end{array}
 \right.
 \end{equation}
-The static pressure $P_s = 101325$ $Pa$ is set at the subsonic outlet and a static pressure boundary type is used. The implementation of the pressure boundary conditions is done on the model of \cite{SEM}. A solid wall boundary condition is set for the top and bottom walls of the computational domain: the normal velocity is zero since no mass can penetrate the solid body. The mesh is made of triangular cells.\\
+The static pressure $P_s = 101325$ $Pa$ is set at the subsonic outlet and a static pressure boundary type is used. The implementation of the pressure boundary conditions is done on the model of \cite{SEM}. A solid wall boundary condition is set for the top and bottom walls of the computational domain: the normal velocity is zero since no mass can penetrate the solid body. Lastly, the code is run until steady-state with a $CFL$ of $40$.\\
 The steady-state for Mach numbers ranging from $M_{\infty} = 10^{-3}$ to $M_{\infty} = 10^{-7}$ is shown in \fig{fig:cylinder}. The iso-Mach lines are drawn with $30$ intervals ranging from $2 \cdot 10^{-10}$ to $2M_{\infty}$, and allow to assess the symmetry of the numerical solution.
 \begin{figure}[H]
         \centering
@@ -1388,19 +1388,18 @@ $10^{-7}$ & $2.283$ $10^{-7}$ & $1.144$ $10^{-7}$ & $1.99$ \\ \hline
 \end{center}
 \nonumber
 \end{table}
-In \fig{fig:pressure_vel_fluc}, the pressure and velocity fluctuations are plotted as a function of the far field Mach number, on a log-log plot. The pressure and velocity fluctuations are expected to be of the order of the Mach number square and the Mach number, respectively. It is known that some stabilization methods, alike upwind scheme \cite{guillard}, can produce pressure fluctuations with the wrong order. The objective of \fig{fig:pressure_vel_fluc} is to show that the new definition of the viscosity coefficients yields the correct order in the low Mach limit for both the pressure and velocity variables. For reference purpose, the function $f(M) = M^2$ and $f(M)=M$ are plotted.  
+In \fig{fig:pressure_vel_fluc}, the pressure and velocity fluctuations are plotted as a function of the far field Mach number, on a log-log plot. The pressure and velocity fluctuations are expected to be of the order of the Mach number square and the Mach number, respectively. It is known that some stabilization methods, alike upwind scheme \cite{guillard}, can produce pressure fluctuations with the wrong order. The objective of \fig{fig:pressure_vel_fluc} is to show that the new definition of the viscosity coefficients yields the correct order in the low Mach limit for the pressure fluctuations. It was also observed that the velocity fluctuations are of the order of the Mach number. For reference purpose, the function $f(M) = M^2$ and $f(M)=M$ are plotted.  
 \begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{pressure_fluctuation.png}
 \caption{Log-log plot of the pressure and velocity fluctuations as a function of the far field Mach number.}
 \label{fig:pressure_vel_fluc}
 \end{figure}
-It is noted that the velocity fluctuations yields the correct order of convergence as a function of the Mach number for all simulations. In another hand, the pressure fluctuations only display a slope of $2$ until $M_{\infty} = 10^{-7}$.
 %---------------------------------------------------------------------------------------------------
 \subsection{Subsonic flow over a $2$-D hump} \label{sec:hump}
 %---------------------------------------------------------------------------------------------------
 This is a another example of an internal flow configuration. It consist of a channel of height $L=1$ $m$ and length $3L$, with a circular bump of length $L$ and thickness $0.1L$. The bump is located on the bottom wall at a distance $L$ from the inlet. The system is initialized with an uniform pressure $P=101325$ $Pa$ and temperature $T=300$ $K$. The initial velocity is computed from the Mach number, $M_{\infty}$, the pressure, the temperature and the Ideal Gas equation of state with the heat capacity $C_v = 717$ $J/kg-K$ and the heat capacity ratio $\gamma=1.4$. At the inlet, a subsonic stagnation boundary condition is used and the stagnation pressure and temperature are computed using \eqt{eq:stagnation_relations}.
-The static pressure $P_s = 101325$ $Pa$ is set at the subsonic outlet. An uniform grid is used to get the numerical solution until steady-state is reached. The results are shown in \fig{fig:2d_hump_mach_0p7}, \fig{fig:2d_hump_mach_0p01}, \fig{fig:2d_hump_mach_0p0001} and \fig{fig:2d_hump_mach_0p0000001} for the inlet Mach numbers $M_{\infty}=0.7$, $M_{\infty}=0.01$, $M_{\infty}=10^{-4}$ and $M_{\infty}=10^{-7}$, respectively. It is expected that, within the low Mach number range, the solution does not depend on the Mach number and is identical to the solution obtained with an incompressible flow code. On the other hand, for a flow at $M=0.7$, the compressible effects become more important and shock can form.
+The static pressure $P_s = 101325$ $Pa$ is set at the subsonic outlet. The results are shown in \fig{fig:2d_hump_mach_0p7}, \fig{fig:2d_hump_mach_0p01}, \fig{fig:2d_hump_mach_0p0001} and \fig{fig:2d_hump_mach_0p0000001} for the inlet Mach numbers $M_{\infty}=0.7$, $M_{\infty}=0.01$, $M_{\infty}=10^{-4}$ and $M_{\infty}=10^{-7}$, respectively. It is expected that, within the low Mach number range, the solution does not depend on the Mach number and is identical to the solution obtained with an incompressible flow code. On the other hand, for a flow at $M=0.7$, the compressible effects become more important and shock can form. An uniform grid of $3352$ $Q_1$ elements was used to get the numerical solution for Mach numbers below $M_{\infty}=0.01$. The mesh was refined once for $M_{\infty}=0.7$ in order to better resolve the shock. The code was run with a $CFL$ of $20$ until steady-state is reached.
 \begin{figure}[H]
         \centering
         \begin{subfigure}[b]{0.5\textwidth}
@@ -1442,7 +1441,7 @@ The results presented in \fig{fig:2d_hump} were obtained with the new definition
 %---------------------------------------------------------------------------------------------------
 \subsection{Supersonic flow in a compression corner} \label{sec:corner}
 %---------------------------------------------------------------------------------------------------
-This is an example of a supersonic flow over a wedge of angle $15^{\circ}$ where an oblique shock is generated at steady-state. The Mach number upstream of the shock is fixed to $M=2.5$. The initial conditions are uniform: the pressure and temperature are set to $P=101325$ $Pa$ and $T=300$ $K$, respectively. The initial velocity is computed from the upstream Mach number and using the Ideal Gas equation of state with the same parameters as in \sct{sec:hump}. The code is run until steady-state. From the oblique shock theory \cite{CompressionCorner}, an analytical solution for this supersonic flow is available and give the downstream to upstream pressure, entropy and Mach number ratios. The analytical and numerical ratios are given in \tbl{tbl:corner_exact_sol}, and are very close. The shock wave angle at steady-state is also known and given by the so-called $\theta -\beta -M$ relation:
+This is an example of a supersonic flow over a wedge of angle $15^{\circ}$ where an oblique shock is generated at steady-state. The Mach number upstream of the shock is fixed to $M=2.5$. The initial conditions are uniform: the pressure and temperature are set to $P=101325$ $Pa$ and $T=300$ $K$, respectively. The initial velocity is computed from the upstream Mach number and using the Ideal Gas equation of state with the same parameters as in \sct{sec:hump}. The code is run until steady-state with a $CFL$ of $2$. The $2$-D mesh was made of $16109$ $Q_1$ elements. From the oblique shock theory \cite{CompressionCorner}, an analytical solution for this supersonic flow is available and give the downstream to upstream pressure, entropy and Mach number ratios. The analytical and numerical ratios are given in \tbl{tbl:corner_exact_sol}, and are very close. The shock wave angle at steady-state is also known and given by the so-called $\theta -\beta -M$ relation:
 \begin{equation}
 \tan \theta = 2 \cot \beta \frac{M^2 \sin^2 \beta -1}{M^2 \left(\gamma+\cos^2 (2\beta)\right)+2} \nonumber
 \end{equation}
